# glsg

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  bundle.sh
cmake/tests/: CTestTestfile.cmake
doc/: Doxyfile
examples/: CMakeLists.txt  app.cpp
examples/simplegame/: CMakeLists.txt  SGAppInputComponent.h  SGCameraInputComponent.h  SGSceneManagerInputComponent.h  simplegame.cpp
examples/simplegame/data/scripts/: cow_program.py  game_scene.py  mainmenu_scene.py
examples/simplegame/data/shaders/: basic.fs.glsl  basic.vs.glsl
examples/simplegame/data/shaders/include/: common.glsl  common.h.glsl
glsg/application/: Application.cpp  Application.h  ApplicationCommands.h
glsg/command/: Command.h
glsg/component/: InputComponent.h
glsg/core/: Core.cpp  Core.h  Object.h  StateMachine.h  StateMachineState.h
glsg/glmext/: glmext.h
glsg/input/: Input.h  InputListener.cpp  InputListener.h
glsg/log/: Log.cpp  Log.h
glsg/render/: Camera.cpp  Camera.h  CameraCommands.h  Framebuffer.cpp  Framebuffer.h  GL.cpp  GL.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h
glsg/resource/: ResourceLoader.cpp  ResourceLoader.h
glsg/scene/: Scene.cpp  Scene.h  SceneGraphScene.cpp  SceneGraphScene.h  SceneManager.cpp  SceneManager.h  UIScene.cpp  UIScene.h
glsg/scenegraph/: SceneNode.cpp  SceneNode.h  SceneNodeCullVisitor.cpp  SceneNodeCullVisitor.h  SceneNodeUpdateVisitor.cpp  SceneNodeUpdateVisitor.h  SceneNodeVisitor.cpp  SceneNodeVisitor.h
glsg/script/: PythonScript.h  PythonScriptCore.cpp  PythonScriptCore.h  ScriptBridge.cpp  ScriptBridge.h
glsg/shader/: Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderRegistry.cpp  ShaderRegistry.h
glsg/state/: Blending.cpp  Blending.h  CullFace.cpp  CullFace.h  DepthTest.cpp  DepthTest.h  Mask.cpp  Mask.h  State.cpp  State.h
tests/: CMakeLists.txt  test1.h  test2.h
